ParIcedAmericano.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParIcedAmericano
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsIcedAmericano
import LexIcedAmericano

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  ')'       { PT _ (TS _ 6)  }
  '*'       { PT _ (TS _ 7)  }
  '+'       { PT _ (TS _ 8)  }
  ','       { PT _ (TS _ 9)  }
  '-'       { PT _ (TS _ 10) }
  '/'       { PT _ (TS _ 11) }
  ';'       { PT _ (TS _ 12) }
  '<'       { PT _ (TS _ 13) }
  '<='      { PT _ (TS _ 14) }
  '='       { PT _ (TS _ 15) }
  '=='      { PT _ (TS _ 16) }
  '>'       { PT _ (TS _ 17) }
  '>='      { PT _ (TS _ 18) }
  'boolean' { PT _ (TS _ 19) }
  'else'    { PT _ (TS _ 20) }
  'false'   { PT _ (TS _ 21) }
  'if'      { PT _ (TS _ 22) }
  'int'     { PT _ (TS _ 23) }
  'return'  { PT _ (TS _ 24) }
  'string'  { PT _ (TS _ 25) }
  'true'    { PT _ (TS _ 26) }
  'var'     { PT _ (TS _ 27) }
  'while'   { PT _ (TS _ 28) }
  '{'       { PT _ (TS _ 29) }
  '||'      { PT _ (TS _ 30) }
  '}'       { PT _ (TS _ 31) }
  L_Ident   { PT _ (TV _)    }
  L_integ   { PT _ (TI _)    }
  L_quoted  { PT _ (TL _)    }

%%

Ident :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Ident) }
Ident  : L_Ident { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Ident (tokenText $1)) }

Integer :: { (AbsIcedAmericano.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsIcedAmericano.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Program) }
Program
  : ListTopDef { (fst $1, AbsIcedAmericano.Program (fst $1) (snd $1)) }

TopDef :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, AbsIcedAmericano.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Arg) }
Arg
  : Type Ident { (fst $1, AbsIcedAmericano.ValueArg (fst $1) (snd $1) (snd $2)) }
  | 'var' Type Ident { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.RefArg (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }

ListArg :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.Arg]) }
ListArg
  : {- empty -} { (AbsIcedAmericano.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Block (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.Stmt]) }
ListStmt
  : {- empty -} { (AbsIcedAmericano.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Stmt) }
Stmt
  : ';' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Empty (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | Type ListItem ';' { (fst $1, AbsIcedAmericano.Decl (fst $1) (snd $1) (snd $2)) }
  | Ident '=' Expr ';' { (fst $1, AbsIcedAmericano.Ass (fst $1) (snd $1) (snd $3)) }
  | 'return' Expr ';' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Ret (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'if' '(' Expr ')' Block { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Cond (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Block 'else' Block { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.CondElse (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Block { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.While (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | Expr ';' { (fst $1, AbsIcedAmericano.SExp (fst $1) (snd $1)) }
  | TopDef { (fst $1, AbsIcedAmericano.SFnDef (fst $1) (snd $1)) }

Item :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Item) }
Item
  : Ident { (fst $1, AbsIcedAmericano.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsIcedAmericano.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Type) }
Type
  : 'int' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Int (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Str (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Bool (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }

ListType :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.Type]) }
ListType
  : {- empty -} { (AbsIcedAmericano.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr6
  : Ident { (fst $1, AbsIcedAmericano.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsIcedAmericano.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.ELitTrue (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.ELitFalse (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, AbsIcedAmericano.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, AbsIcedAmericano.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Neg (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Not (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsIcedAmericano.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsIcedAmericano.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsIcedAmericano.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsIcedAmericano.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, AbsIcedAmericano.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (AbsIcedAmericano.BNFC'Position, [AbsIcedAmericano.Expr]) }
ListExpr
  : {- empty -} { (AbsIcedAmericano.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.AddOp) }
AddOp
  : '+' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Plus (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Minus (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.MulOp) }
MulOp
  : '*' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Times (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Div (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.Mod (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsIcedAmericano.BNFC'Position, AbsIcedAmericano.RelOp) }
RelOp
  : '<' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.LTH (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.LE (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.GTH (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.GE (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.EQU (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1), AbsIcedAmericano.NE (uncurry AbsIcedAmericano.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsIcedAmericano.Program
pProgram = fmap snd . pProgram_internal
}
