ParIcedAmericano.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParIcedAmericano.y
-----------------------------------------------------------------------------


rule 32 is unused
rule 33 is unused
rule 34 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	Arg -> 'var' Type Ident                            (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> ';'                                        (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Ident '=' Expr ';'                         (18)
	Stmt -> 'return' Expr ';'                          (19)
	Stmt -> 'if' '(' Expr ')' Block                    (20)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (21)
	Stmt -> 'while' '(' Expr ')' Block                 (22)
	Stmt -> Expr ';'                                   (23)
	Stmt -> TopDef                                     (24)
	Item -> Ident                                      (25)
	Item -> Ident '=' Expr                             (26)
	ListItem -> Item                                   (27)
	ListItem -> Item ',' ListItem                      (28)
	Type -> 'int'                                      (29)
	Type -> 'string'                                   (30)
	Type -> 'boolean'                                  (31)
	ListType ->                                        (32)
	ListType -> Type                                   (33)
	ListType -> Type ',' ListType                      (34)
	Expr6 -> Ident                                     (35)
	Expr6 -> Integer                                   (36)
	Expr6 -> 'true'                                    (37)
	Expr6 -> 'false'                                   (38)
	Expr6 -> Ident '(' ListExpr ')'                    (39)
	Expr6 -> String                                    (40)
	Expr6 -> '(' Expr ')'                              (41)
	Expr5 -> '-' Expr6                                 (42)
	Expr5 -> '!' Expr6                                 (43)
	Expr5 -> Expr6                                     (44)
	Expr4 -> Expr4 MulOp Expr5                         (45)
	Expr4 -> Expr5                                     (46)
	Expr3 -> Expr3 AddOp Expr4                         (47)
	Expr3 -> Expr4                                     (48)
	Expr2 -> Expr2 RelOp Expr3                         (49)
	Expr2 -> Expr3                                     (50)
	Expr1 -> Expr2 '&&' Expr1                          (51)
	Expr1 -> Expr2                                     (52)
	Expr -> Expr1 '||' Expr                            (53)
	Expr -> Expr1                                      (54)
	ListExpr ->                                        (55)
	ListExpr -> Expr                                   (56)
	ListExpr -> Expr ',' ListExpr                      (57)
	AddOp -> '+'                                       (58)
	AddOp -> '-'                                       (59)
	MulOp -> '*'                                       (60)
	MulOp -> '/'                                       (61)
	MulOp -> '%'                                       (62)
	RelOp -> '<'                                       (63)
	RelOp -> '<='                                      (64)
	RelOp -> '>'                                       (65)
	RelOp -> '>='                                      (66)
	RelOp -> '=='                                      (67)
	RelOp -> '!='                                      (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'boolean'      { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'false'        { PT _ (TS _ 21) }
	'if'           { PT _ (TS _ 22) }
	'int'          { PT _ (TS _ 23) }
	'return'       { PT _ (TS _ 24) }
	'string'       { PT _ (TS _ 25) }
	'true'         { PT _ (TS _ 26) }
	'var'          { PT _ (TS _ 27) }
	'while'        { PT _ (TS _ 28) }
	'{'            { PT _ (TS _ 29) }
	'||'           { PT _ (TS _ 30) }
	'}'            { PT _ (TS _ 31) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24
	Item            rules 25, 26
	ListItem        rules 27, 28
	Type            rules 29, 30, 31
	ListType        rules 32, 33, 34
	Expr6           rules 35, 36, 37, 38, 39, 40, 41
	Expr5           rules 42, 43, 44
	Expr4           rules 45, 46
	Expr3           rules 47, 48
	Expr2           rules 49, 50
	Expr1           rules 51, 52
	Expr            rules 53, 54
	ListExpr        rules 55, 56, 57
	AddOp           rules 58, 59
	MulOp           rules 60, 61, 62
	RelOp           rules 63, 64, 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 11
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 10

State 7

	Type -> 'boolean' .                                 (rule 31)

	L_Ident        reduce using rule 31


State 8

	Type -> 'int' .                                     (rule 29)

	L_Ident        reduce using rule 29


State 9

	Type -> 'string' .                                  (rule 30)

	L_Ident        reduce using rule 30


State 10

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 12


State 11

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 12

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'var'          shift, and enter state 16

	Arg            goto state 13
	ListArg        goto state 14
	Type           goto state 15

State 13

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 20


State 14

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 19


State 15

	Arg -> Type . Ident                                 (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 18

State 16

	Arg -> 'var' . Type Ident                           (rule 9)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Type           goto state 17

State 17

	Arg -> 'var' Type . Ident                           (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 18

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 19

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 23

	Block          goto state 22

State 20

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'var'          shift, and enter state 16

	Arg            goto state 13
	ListArg        goto state 21
	Type           goto state 15

State 21

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 22

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'boolean'      reduce using rule 5
	'false'        reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'while'        reduce using rule 5
	'}'            reduce using rule 5
	L_Ident        reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	%eof           reduce using rule 5


State 23

	Block -> '{' . ListStmt '}'                         (rule 13)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	';'            shift, and enter state 42
	'boolean'      shift, and enter state 7
	'false'        shift, and enter state 43
	'if'           shift, and enter state 44
	'int'          shift, and enter state 8
	'return'       shift, and enter state 45
	'string'       shift, and enter state 9
	'true'         shift, and enter state 46
	'while'        shift, and enter state 47
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	TopDef         goto state 28
	ListStmt       goto state 29
	Stmt           goto state 30
	Type           goto state 31
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 38

State 24

	Arg -> 'var' Type Ident .                           (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 25

	Stmt -> Ident . '=' Expr ';'                        (rule 18)
	Expr6 -> Ident .                                    (rule 35)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 39)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	'('            shift, and enter state 79
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'='            shift, and enter state 80
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35


State 26

	Expr6 -> Integer .                                  (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	'&&'           reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'||'           reduce using rule 36


State 27

	Expr6 -> String .                                   (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 28

	Stmt -> TopDef .                                    (rule 24)

	'!'            reduce using rule 24
	'('            reduce using rule 24
	'-'            reduce using rule 24
	';'            reduce using rule 24
	'boolean'      reduce using rule 24
	'false'        reduce using rule 24
	'if'           reduce using rule 24
	'int'          reduce using rule 24
	'return'       reduce using rule 24
	'string'       reduce using rule 24
	'true'         reduce using rule 24
	'while'        reduce using rule 24
	'}'            reduce using rule 24
	L_Ident        reduce using rule 24
	L_integ        reduce using rule 24
	L_quoted       reduce using rule 24


State 29

	Block -> '{' ListStmt . '}'                         (rule 13)

	'}'            shift, and enter state 78


State 30

	ListStmt -> Stmt . ListStmt                         (rule 15)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	';'            shift, and enter state 42
	'boolean'      shift, and enter state 7
	'false'        shift, and enter state 43
	'if'           shift, and enter state 44
	'int'          shift, and enter state 8
	'return'       shift, and enter state 45
	'string'       shift, and enter state 9
	'true'         shift, and enter state 46
	'while'        shift, and enter state 47
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	TopDef         goto state 28
	ListStmt       goto state 77
	Stmt           goto state 30
	Type           goto state 31
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 38

State 31

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Stmt -> Type . ListItem ';'                         (rule 17)

	L_Ident        shift, and enter state 2

	Ident          goto state 74
	Item           goto state 75
	ListItem       goto state 76

State 32

	Expr5 -> Expr6 .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 33

	Expr4 -> Expr5 .                                    (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'||'           reduce using rule 46


State 34

	Expr4 -> Expr4 . MulOp Expr5                        (rule 45)
	Expr3 -> Expr4 .                                    (rule 48)

	'!='           reduce using rule 48
	'%'            shift, and enter state 71
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            shift, and enter state 72
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            shift, and enter state 73
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48

	MulOp          goto state 70

State 35

	Expr3 -> Expr3 . AddOp Expr4                        (rule 47)
	Expr2 -> Expr3 .                                    (rule 50)

	'!='           reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'+'            shift, and enter state 68
	','            reduce using rule 50
	'-'            shift, and enter state 69
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50

	AddOp          goto state 67

State 36

	Expr2 -> Expr2 . RelOp Expr3                        (rule 49)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 51)
	Expr1 -> Expr2 .                                    (rule 52)

	'!='           shift, and enter state 60
	'&&'           shift, and enter state 61
	')'            reduce using rule 52
	','            reduce using rule 52
	';'            reduce using rule 52
	'<'            shift, and enter state 62
	'<='           shift, and enter state 63
	'=='           shift, and enter state 64
	'>'            shift, and enter state 65
	'>='           shift, and enter state 66
	'||'           reduce using rule 52

	RelOp          goto state 59

State 37

	Expr -> Expr1 . '||' Expr                           (rule 53)
	Expr -> Expr1 .                                     (rule 54)
